# Husky

./: .gitignore  CMakeLists.txt  Makefile  README.md  os.elf  os_elf.dis  os_elf.elf  os_elf.elf.map  os_elf.hex
src/: kernel.c
src/init/shell/: shell.c
src/mm/kmalloc/: kmalloc.c  kmalloc.h
src/mm/pages/: page.c  page.h
src/trap/: trap.c  trap.h
src/uart/: uart.c  uart.h
